force-app/main/default/objects/Case/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <formula>Contact.Birthdate</formula>
    <inlineHelpText>Pulls the birthdate from the related Contact record</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>