force-app/main/default/objects/Case/fields/DateofFollowUpAction__c.field-meta.xml
<CustomField>
    <fullName>DateofFollowUpAction__c</fullName>
    <label>Date of Follow Up Action</label>
    <type>Date</type>
</CustomField>