force-app/main/default/objects/Case/fields/DateReported__c.field-meta.xml
<CustomField>
    <fullName>DateReported__c</fullName>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>