force-app/main/default/objects/Case/fields/DaysOpen__c.field-meta.xml
<CustomField>
    <fullName>DaysOpen__c</fullName>
    <formula>(TODAY() -  DateReported__c ) +1</formula>
    <inlineHelpText>Calculates days the case has been open. The day it was opened counts as day 1.</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>