force-app/main/default/objects/Case/fields/DSO1SignOff__c.field-meta.xml
<CustomField>
    <fullName>DSO1SignOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSO 1 Sign Off</label>
    <type>Checkbox</type>
</CustomField>