force-app/main/default/objects/Case/fields/DSO1SignOffNameDate__c.field-meta.xml
<CustomField>
    <fullName>DSO1SignOffNameDate__c</fullName>
    <inlineHelpText>Automatically updated: the name and date/time when DSO 1 signed off the safeguarding case</inlineHelpText>
    <label>DSO 1 Sign Off Name/Date</label>
    <type>TextArea</type>
</CustomField>