force-app/main/default/objects/Case/fields/DSO2SignOff__c.field-meta.xml
<CustomField>
    <fullName>DSO2SignOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSO 2 Sign Off</label>
    <type>Checkbox</type>
</CustomField>