force-app/main/default/objects/Case/fields/DSO2SignOffNameDate__c.field-meta.xml
<CustomField>
    <fullName>DSO2SignOffNameDate__c</fullName>
    <inlineHelpText>Automatically updated: the name and date/time when DSO 2 signed off the safeguarding case</inlineHelpText>
    <label>DSO 2 Sign Off Name/Date</label>
    <type>TextArea</type>
</CustomField>