force-app/main/default/objects/Case/fields/DSONotes__c.field-meta.xml
<CustomField>
    <fullName>DSONotes__c</fullName>
    <label>DSO Notes</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>