force-app/main/default/objects/Case/fields/EmailSenttoDSOStaffMember__c.field-meta.xml
<CustomField>
    <fullName>EmailSenttoDSOStaffMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent to DSO/Staff Member</label>
    <type>Checkbox</type>
</CustomField>