force-app/main/default/objects/Case/fields/FollowUpActioned__c.field-meta.xml
<CustomField>
    <fullName>FollowUpActioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Actioned</label>
    <type>Checkbox</type>
</CustomField>