force-app/main/default/objects/Case/fields/FollowUpPlan__c.field-meta.xml
<CustomField>
    <fullName>FollowUpPlan__c</fullName>
    <label>Follow Up Plan</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>