force-app/main/default/objects/Case/fields/ImmediateRiskCrisisIdentified__c.field-meta.xml
<CustomField>
    <fullName>ImmediateRiskCrisisIdentified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Risk/Crisis Identified</label>
    <type>Checkbox</type>
</CustomField>