force-app/main/default/objects/Case/fields/LeadDSO__c.field-meta.xml
<CustomField>
    <fullName>LeadDSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the DSO who is primarily responsible for reviewing this safeguarding issue</inlineHelpText>
    <label>Lead DSO</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The User you select must have the Role of &apos;DSO&apos;</errorMessage>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>DSO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Safeguarding_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>