force-app/main/default/objects/Case/fields/ReportNumber__c.field-meta.xml
<CustomField>
    <fullName>ReportNumber__c</fullName>
    <label>Report Number</label>
    <type>Date</type>
</CustomField>