force-app/main/default/objects/Case/fields/StaffMemberReported__c.field-meta.xml
<CustomField>
    <fullName>StaffMemberReported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the staff member who reported the safeguarding concern</inlineHelpText>
    <label>Staff Member Reported</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Safeguarding_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>