force-app/main/default/objects/Case/fields/WhoNeedsToKnow__c.field-meta.xml
<CustomField>
    <fullName>WhoNeedsToKnow__c</fullName>
    <label>Who Needs To Know</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>