force-app/main/default/objects/Case/validationRules/First_DSO_Sign_Off_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_DSO_Sign_Off_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(DSO1SignOff__c=FALSE,  DSO2SignOff__c=TRUE)</errorConditionFormula>
    <errorMessage>The Lead DSO must sign this off before a second DSO can approve</errorMessage>
</ValidationRule>